# AIzcjd

./: .gitignore  pyproject.toml
backend/: app.py  config.py  task_store.py
backend/api/services/: __init__.py  task_runner.py
backend/core/: build_research_queries.py  content_extractor.py  fetch_context_results.py  generate_analysis_outline.py  llm_client.py  policy_analyzer.py  prompts.py  search_engine.py
backend/reports/: html_report.py  render_analysis_web_pdf.py  render_html_report.py  render_llm_reports.py  render_pdf_report.py
frontend/: app.js  index.html  style.css
